编写了会员页面的UI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:24.2.1'
     compile project(':qyngLibrary')
+    compile 'com.yalantis:contextmenu:1.0.7'
 }
